deployment/kustomize/base/redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: fgray-otel-python-app
  name: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: fgray-otel-python-app
  name: redis
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
    spec:
      restartPolicy: Always
      containers:
      - name: db-redis
        image: redis:6.2-alpine
        ports:
          - containerPort: 6379
        imagePullPolicy: Always
